// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots checked false 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots checked true 1`] = `
<label
  aria-checked={true}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-3p558u=""
    >
      <div
        data-css-1a0fvsw=""
      />
    </div>
  </div>
  <input
    checked={true}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots click large toggles 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots click small toggles 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-f5cui8=""
    >
      <div
        data-css-44oays=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots color blue 1`] = `
<label
  aria-checked={true}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-3p558u=""
    >
      <div
        data-css-1a0fvsw=""
      />
    </div>
  </div>
  <input
    checked={true}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots color green 1`] = `
<label
  aria-checked={true}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-1ad2n5h=""
    >
      <div
        data-css-1a0fvsw=""
      />
    </div>
  </div>
  <input
    checked={true}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots color orange 1`] = `
<label
  aria-checked={true}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-3p558u=""
    >
      <div
        data-css-1a0fvsw=""
      />
    </div>
  </div>
  <input
    checked={true}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots disabled false 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots disabled true 1`] = `
<label
  aria-checked={false}
  data-css-wytdm9=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
  tabIndex={-1}
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots error false 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots error true 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-mmyfiy=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Clickable in error state
  </span>
</label>
`;

exports[`Storyshots error true w/ disabled 1`] = `
<label
  aria-checked={false}
  data-css-wytdm9=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
  tabIndex={-1}
>
  <div
    data-css-mmyfiy=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Such errors
  </span>
</label>
`;

exports[`Storyshots label large left 1`] = `
<label
  aria-checked={false}
  data-css-1u14hec=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-ivahyw=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots label large right 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots label small left 1`] = `
<label
  aria-checked={false}
  data-css-1u14hec=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-f5cui8=""
    >
      <div
        data-css-44oays=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-1n855vm=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots label small right 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-f5cui8=""
    >
      <div
        data-css-44oays=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-1ppq9hy=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots size large 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-19bj9q0=""
    >
      <div
        data-css-1o90whm=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-k7ezbc=""
  >
    Click me
  </span>
</label>
`;

exports[`Storyshots size small 1`] = `
<label
  aria-checked={false}
  data-css-nq9iqf=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  role="checkbox"
>
  <div
    data-css-1lu7sfl=""
  >
    <div
      data-css-f5cui8=""
    >
      <div
        data-css-44oays=""
      />
    </div>
  </div>
  <input
    checked={false}
    data-css-6wu9td=""
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
  <span
    data-css-1ppq9hy=""
  >
    Click me
  </span>
</label>
`;
